Use Java 11 List instead of ImmutableList for easier compatibility.